--- a/auth/client/package.json
+++ b/auth/client/package.json
@@ -10,13 +10,14 @@
     "bootstrap": "^4.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.0",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
