--- a/auth/server/package.json
+++ b/auth/server/package.json
@@ -7,8 +7,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "googleapis": "^67.1.1",
     "jwt-simple": "^0.5.6",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
