--- a/auth/server/package.json
+++ b/auth/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "googleapis": "^67.1.1",
     "jwt-simple": "^0.5.6",
