--- a/auth/server/package.json
+++ b/auth/server/package.json
@@ -7,7 +7,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "googleapis": "^67.1.1",
+    "googleapis": "39",
     "jwt-simple": "^0.5.6",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
@@ -17,7 +17,6 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
