--- a/auth/client/package.json
+++ b/auth/client/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "codemirror": "^5.59.4",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
