--- a/auth/client/package.json
+++ b/auth/client/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.5.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
+    "react-google-picker": "^0.1.0",
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.2",
