--- a/auth/client/package.json
+++ b/auth/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "codemirror": "^5.59.4",
+    "gapi-script": "^1.1.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
